# Timetable-bot

./: .env(example)  .gitignore  README.md  docker-compose.yaml  pyproject.toml
bot/: Dockerfile  __init__.py  commands.py  config.py  loader.py  main.py
bot/adapters/: buttons.py
bot/adapters/FSMs/: Free_slot.py  Reservation.py  common.py
bot/adapters/handlers/: callbacks.py  handlers.py
bot/core/: entities.py  timetable.py
bot/service/store/: __init__.py  google_sheets.py  local_excel_file.py  store.py
bot/view/: buttons.py  timetable.py
infra/: docker-compose.yaml
