[tool.poetry]
name = "rehearsal-room-timetable-bot"
version = "0.1.0"
description = ""
authors = ["mark47B <windachae47@gmail.com>"]
readme = "README.md"
packages = [{include = "rehearsal_room_timetable_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
prettytable = "^3.7.0"
openpyxl = "^3.1.2"
uvloop = "^0.17.0"
loguru = "^0.7.0"
toolz = "^0.12.0"
aiogram = ">=3.0.0b7"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
